# transcribe-tools

./: pyproject.toml  setup.sh
transcribe_tools/: faster.py  ffmpeg.py  groq_api.py  mp4_to_notebooklm.py  split_mp4.py  upload_notebooklm.py
transcribe_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
